samples/_failures_safe/1761361137_8ac743_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef1ef7a8.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_ef1ef7a8.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
